Extra protection against Wavey and Mits

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Twitch IDE - Code From Chat!</h1>
-    <div id="app" data-channel="cajogos"></div>
+    <div id="app" style="width:1920px;height:1080px" data-channel="cajogos"></div>
     <script src="/dist/main.js"></script>
 </body>
 </html>
